# 3gee-watermark

./: README.md  app.py  app_start.py  pyproject.toml
app/: meta.py
app/core/: __init__.py  config_edit.py  watermark.py
app/gui/: about_dialog.py  add_tool.py  config_editor.py  config_list.py  decipher_tool.py  main_window.py
