[tool.poetry]
name = "3gee-watermark"
version = "0.1.0"
description = ""
authors = ["Huang Baochen <huangbaochenwo@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.3.1"
blind-watermark = "^0.4.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.3"
pywin32 = "^304"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
